# execution-spec-tests

./: .flake8  .git-blame-ignore-revs  .gitignore  .lycheeignore  .markdownlint.yaml  .pre-commit-config.yaml  .pyspelling.yml  .readthedocs.yaml  .wordlist.txt  .wordlist_opcodes.txt  .wordlist_python_pytest.txt  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  HUMANS.md  README.md  SECURITY.md  config-evm.yaml  config-feature.yaml  config.json.example  convert_addresses.py  converted-ethereum-tests.txt  eels_resolutions.json  eest_wishlist.md  eof_convert.py  evm-config.yaml  evmone-hash.txt  execute-remote-mainnet.sh  failed_tests_output.txt  file.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  pytest-check-eip-versions.ini  pytest-consume-direct.ini  pytest-consume-via-engine-api.ini  pytest-consume-via-rlp.ini  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/configs/: eels_resolutions.json  evm-impl.yaml  evm.yaml  feature.yaml
.github/removew/: docs_main.yaml
.github/scripts/: fill_introduced_tests.sh  fill_prepatched_tests.sh  generate_eip_report.py  get_release_props.py  parse_ported_tests.sh
.github/workflows/: check-links.yml  check_eip_versions.yaml  check_links.yml  coverage.yaml  docs_deploy.yaml  docs_dev.yaml  docs_main.yaml  docs_release.yaml  docs_tags.yaml  fill_with_t8n.yaml  fixtures.yaml  fixtures_feature.yaml  post_release.yaml  release.yaml  sync_fork.yaml  tags.yaml  test.yaml  tox.yaml  tox_verify.yaml
configs/: evm.yaml  feature.yaml
consume/: consume_fixtures.py
demo/: test_1559.py
dev/: index.html
dev/coding_style/: index.html
dev/docs/: index.html
development/404/: index.html
development/consuming_tests/: index.html
development/dev/: index.html
development/filling_tests/: index.html
development/getting_help/: index.html
development/writing_tests/: index.html
docs/: CHANGELOG.md  changelog_section_template.md  conf.py  gen_filler_pages.py  gen_test_case_reference.py  gen_tool_specs_types.py  gen_type_files.py  hugo.toml  index.md  index.rst  navigation.md  package_overview.rst  quick_start.rst  releases.md  t8n_specs.md  writing_tests.rst
docs/checklist_templates/: eip_testing_checklist_template.md  index.md
docs/consuming_tests/: blockchain_test.md  blockchain_test_engine.md  blockchain_test_hive.md  common_types.md  consume.md  consume_command.md  eof_test.md  exceptions.md  index.md  releases.md  state_test.md  transaction_test.md
docs/dev/: coding_style.md  configurations.md  deps_and_packaging.md  docs.md  documenting_clis.md  environment.md  index.md  interactive_usage.md  logging.md  porting_legacy_tests.md  precommit.md  test_actions_locally.md
docs/diagrams/: eest_flowcharts.ipynb
docs/executing_tests/: index.md
docs/filling_tests/: debugging_t8n_tools.md  eip_checklist.md  filling_tests_command_line.md  filling_tests_dev_fork.md  filling_tests_vs_code.md  getting_started.md  index.md  test_ids.md  transition_tool_support.md
docs/getting_help/: index.md
docs/getting_started/: 01_quick_start.md  code_standards.md  code_standards_details.md  debugging_t8n_tools.md  executing_tests_command_line.md  executing_tests_dev_fork.md  executing_tests_vs_code.md  installation.md  installation_troubleshooting.md  overview.md  quick_start.md  repository_overview.md  setup_vs_code.md  using_fixtures.md
docs/internal/: moving_tests_to_execution_specs.md
docs/javascripts/: site.js
docs/layouts/: index.html
docs/public/: 404.html  index.html  index.xml  sitemap.xml
docs/running_tests/: index.md  releases.md  running.md  useful_pytest_options.md
getting_help/: index.html
latest/: 404.html  index.html
main/: 404.html  gen_test_case_reference.py  index.html  objects.inv  sitemap.xml
navigation/: index.html
pectra-devnet-4@v1.0.1/: 404.html  index.html  objects.inv  sitemap.xml
pr-801-preview/: 404.html  index.html  objects.inv  sitemap.xml
pr-838-preview/: 404.html  gen_test_case_reference.py  index.html  objects.inv  sitemap.xml
pr-842-preview/: 404.html  gen_test_case_reference.py  index.html  objects.inv  sitemap.xml
pr-929-preview/: 404.html  gen_test_case_reference.py  index.html  sitemap.xml
scripts/: README_LABEL_MIGRATION.md  convert_addresses.py  deploy_bloatnet_simple.py  deploy_create2_factory.py  generate_mapping_html.py  generate_mapping_md.py  label_mapping.py  label_usage.py  test_create2.py  transfer_issues.py
search/: search_index.json
src/: conftest.py  logger.cfg  logger.py
stubs/: logger.pyi
tests/: conftest.py  index.html
tests_consume/: test_direct.py  test_via_engine_api.py  test_via_rlp.py
tmp-docs-beta/: 404.html  gen_new.py  gen_test_case_reference_old.py  index.html  objects.inv  sitemap.xml
traces/: data.jsonl  index.html
v1.0.0/: 404.html  gen_test_case_reference.py  index.html  sitemap.xml
v1.0.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.2/: 404.html  index.html  sitemap.xml
v1.0.3/: 404.html  index.html  sitemap.xml
v1.0.4/: 404.html  index.html  sitemap.xml
v1.0.5/: 404.html  index.html  sitemap.xml
v1.0.6/: 404.html  index.html  objects.inv  sitemap.xml
v2.0.0/: 404.html  gen_test_case_reference.py  index.html  sitemap.xml
v2.1.0/: 404.html  index.html  sitemap.xml
v2.1.1/: 404.html  index.html  sitemap.xml
v3.0.0/: 404.html  index.html  sitemap.xml
v4.0.0/: 404.html  index.html  sitemap.xml
v4.1.0/: 404.html  index.html  sitemap.xml
v4.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v4.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v4.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v4.5.0/: 404.html  gen_test_case_reference.py  index.html  objects.inv  sitemap.xml
v5.0.0/: 404.html  index.html  objects.inv  sitemap.xml
v5.1.0/: 404.html  index.html  sitemap.xml
v5.2.0/: 404.html  index.html  sitemap.xml
v5.3.0/: 404.html  index.html  objects.inv  sitemap.xml
verkle@v0.0.4/: 404.html  index.html  objects.inv  sitemap.xml
verkle@v0.0.5/: 404.html  index.html  sitemap.xml
verkle@v0.0.6/: 404.html  index.html  sitemap.xml
writing_tests/: index.html
(+34126 files in other folders)
