[metadata]
name = test-filler
description = Ethereum execution client test authoring framework
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.0
url = https://github.com/ethereum/execution-spec-tests
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages =
    evm_transition_tool
    ethereum_test_forks
    ethereum_test_tools
    pytest_plugins

package_dir =
    =src

python_requires = >=3.10

install_requires =
    ethereum@git+https://github.com/ethereum/execution-specs.git
    setuptools
    types-setuptools
    requests>=2.31.0
    colorlog>=6.7.0
    pytest==7.3.2
    pytest-xdist>=3.3.1,<4
    coincurve>=18.0.0,<19
    trie==2.1.1
    semver==3.0.1

[options.package_data]
ethereum_test_tools =
    py.typed
ethereum_test_forks =
    py.typed
evm_transition_tool =
    py.typed

[options.entry_points]
console_scripts =
    fill = entry_points.fill:main
    tf = entry_points.tf:main
    order_fixtures = entry_points.order_fixtures:main
    pyspelling_soft_fail = entry_points.pyspelling_soft_fail:main
    markdownlintcli2_soft_fail = entry_points.markdownlintcli2_soft_fail:main
    create_whitelist_for_flake8_spelling = entry_points.create_whitelist_for_flake8_spelling:main

[options.extras_require]
test =
    # pytest already in 'install_requires'
    pytest-cov>=4.1.0,<5

lint =
    isort>=5.8,<6
    mypy==0.982; implementation_name == "cpython"
    types-requests
    black==22.3.0; implementation_name == "cpython"
    flake8-spellcheck>=0.24,<0.25
    flake8-docstrings>=1.6,<2
    flake8>=5,<=6
    pep8-naming==0.13.3
    fname8>=0.0.3

docs =
    cairosvg>=2.7.0,<3  # required for social plugin (material)
    gitpython>=3.1.31,<4
    mike>=1.1.2,<2
    mkdocs>=1.4.3,<2
    mkdocs-gen-files>=0.5.0,<1
    mkdocs-git-authors-plugin>=0.7.1,<1
    mkdocs-glightbox>=0.3.4,<1
    mkdocs-literate-nav>=0.6.0,<1
    mkdocs-material>=9.1.14,<10
    mkdocs-material-extensions>=1.1.1,<2
    mkdocstrings>=0.21.2,<1
    mkdocstrings-python>=1.0.0,<2
    pillow>=10.0.1,<11  # required for social plugin (material)
    pyspelling>=2.8.2,<3

[flake8]
dictionaries=en_US,python,technical
docstring-convention = google
extend-ignore = E203, D107, D200, D203, D205,
    D212, D400, D401, D410, D411, D412, D413,
    D414, D415, D416, N806 
    # Ignore E203: Whitespace before ':'
    # Ignore D107: Missing docstring in __init__
    # Ignore D200: One-line docstring should fit on one line with quotes
    # Ignore D203: 1 blank line required before class docstring
    # Ignore D205: blank line required between summary line and description
    # Ignore D212: Multi-line docstring summary should start at the first line
    # Ignore D400: First line should end with a period
    # Ignore D401: First line should be in imperative mood
    # Ignore D410: Missing blank line after section
    # Ignore D411: Missing blank line before section
    # Ignore D412: No blank lines allowed between a section header and its content
    # Ignore D413: Missing blank line after last section
    # Ignore D414: Section has no content
    # Ignore D415: First line should end with a period, question mark, or exclamation point
    # Ignore D416: Section name should end with a colon
    # Ignore N806: Variable names with all caps (ALL_CAPS)
max-line-length = 99
per-file-ignore =
    tests/evm_transition_tool/test_evaluate.py:E501

extend-exclude =
    setup.py
    src/evm_transition_tool/tests/
    src/ethereum_test_tools/tests/
    src/ethereum_test_forks/tests/

# vim: set ft=dosini:
