[metadata]
name = test-filler
description = Ethereum execution client test authoring framework
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.0
url = https://github.com/ethereum/execution-spec-tests
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages =
    ethereum_test_base_types
    ethereum_test_exceptions
    ethereum_test_fixtures
    ethereum_test_forks
    ethereum_test_specs
    ethereum_test_tools
    ethereum_test_types
    ethereum_test_vm
    evm_transition_tool
    pytest_plugins

package_dir =
    =src

python_requires = >=3.10

install_requires =
    click>=8.1.0,<9
    ethereum@git+https://github.com/ethereum/execution-specs
    hive.py@git+https://github.com/marioevz/hive.py
    setuptools
    types-setuptools
    gitpython>=3.1.31,<4
    PyJWT>=2.3.0,<3
    tenacity>8.2.0,<9
    bidict>=0.23,<1
    requests>=2.31.0,<3
    colorlog>=6.7.0,<7
    pytest>7.3.2,<8
    pytest-html>=4.1.0,<5
    pytest-metadata>=3,<4
    pytest-xdist>=3.3.1,<4
    coincurve>=20.0.0,<21
    trie>=2.0.2,<3
    semver>=3.0.1,<4
    click>=8.0.0,<9
    pydantic>=2.8.0,<2.9
    rich>=13.7.0,<14
    solc-select>=1.0.4

[options.package_data]
ethereum_test_base_types =
    py.typed
ethereum_test_exceptions =
    py.typed
ethereum_test_fixtures =
    py.typed
ethereum_test_forks =
    py.typed
    forks/contracts/*.bin
ethereum_test_specs =
    py.typed
ethereum_test_tools =
    py.typed
ethereum_test_types =
    py.typed
ethereum_test_vm =
    py.typed
evm_transition_tool =
    py.typed
pytest_plugins =
    py.typed

[options.entry_points]
console_scripts =
    fill = cli.pytest_commands:fill
    tf = cli.pytest_commands:tf
    checkfixtures = cli.check_fixtures:check_fixtures
    consume = cli.pytest_commands:consume
    genindex = cli.gen_index:generate_fixtures_index_cli
    gentest = cli.gentest:make_test
    pyspelling_soft_fail = cli.tox_helpers:pyspelling
    markdownlintcli2_soft_fail = cli.tox_helpers:markdownlint
    order_fixtures = cli.order_fixtures:order_fixtures
    evm_bytes_to_python = cli.evm_bytes_to_python:main
    hasher = cli.hasher:main

[options.extras_require]
test =
    # pytest already in 'install_requires'
    pytest-cov>=4.1.0,<5

lint =
    isort>=5.8,<6
    mypy==0.991; implementation_name == "cpython"
    types-requests
    black==22.3.0; implementation_name == "cpython"
    flake8-spellcheck>=0.24,<0.25
    flake8-docstrings>=1.6,<2
    flake8>=6.1.0,<7
    pep8-naming==0.13.3
    fname8>=0.0.3

docs =
    cairosvg>=2.7.0,<3  # required for social plugin (material)
    mike>=1.1.2,<2
    mkdocs>=1.4.3,<2
    mkdocs-gen-files>=0.5.0,<1
    mkdocs-git-authors-plugin>=0.7.1,<1
    mkdocs-glightbox>=0.3.4,<1
    mkdocs-literate-nav>=0.6.0,<1
    mkdocs-material>=9.1.14,<10
    mkdocs-material-extensions>=1.1.1,<2
    mkdocstrings>=0.21.2,<1
    mkdocstrings-python>=1.0.0,<2
    pillow>=10.0.1,<11  # required for social plugin (material)
    pyspelling>=2.8.2,<3

[flake8]
dictionaries=en_US,python,technical
docstring-convention = google
extend-ignore = E203, D107, D200, D203, D205,
    D212, E231, D400, D401, D410, D411, D412,
    D413, D414, D415, D416, N806
    # Ignore E203: Whitespace before ':'
    # Ignore D107: Missing docstring in __init__
    # Ignore D200: One-line docstring should fit on one line with quotes
    # Ignore D203: 1 blank line required before class docstring
    # Ignore D205: blank line required between summary line and description
    # Ignore D212: Multi-line docstring summary should start at the first line
    # Ignore E231: Missing whitespace after ':'
    # Ignore D400: First line should end with a period
    # Ignore D401: First line should be in imperative mood
    # Ignore D410: Missing blank line after section
    # Ignore D411: Missing blank line before section
    # Ignore D412: No blank lines allowed between a section header and its content
    # Ignore D413: Missing blank line after last section
    # Ignore D414: Section has no content
    # Ignore D415: First line should end with a period, question mark, or exclamation point
    # Ignore D416: Section name should end with a colon
    # Ignore N806: Variable names with all caps (ALL_CAPS)
max-line-length = 99
per-file-ignore =
    tests/evm_transition_tool/test_evaluate.py:E501

extend-exclude =
    setup.py
    src/evm_transition_tool/tests/
    src/ethereum_test_tools/tests/
    src/ethereum_test_forks/tests/

# vim: set ft=dosini:
